--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-to-pdf": "^3.0.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
